# rustle

./: .README.md.swp  Cargo.toml  README.md  words.txt
.github/workflows/: deploy.yml
src/: .main.rs.swp  main.rs  nerdle.rs  wordle.rs
