[package]
name = "rustle-game"
version = "0.1.0"
edition = "2021"
description = "Play wordle and nerdle in your terminal"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/tylerthecoder/rustle"
repository = "https://github.com/tylerthecoder/rustle"
keywords = ["wordle", "nerdle"]

[[bin]]
name = "rustle"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
clap = { version = "3.1.6", features = ["derive"] }